--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ body {
     font-weight: 500;
     transition: 0.3s ease;
     position: relative;
-    font-weight: normal;
+    font-weight: bold;
 }
 
 .nav-links a::after {
@@ -348,3 +348,4 @@ footer {
     }
 
 }
+
